Update index.html and javascript

--- a/Daily Challenge True or False/index.html
+++ b/Daily Challenge True or False/index.html
@@ -1,22 +1,18 @@
-<!-- Instructions -->
-<!-- Create a function that returns true if all parameters are truthy, and false otherwise. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Testing allTruthy Function</title>
+</head>
+<body>
+    <h2>Testing allTruthy Function</h2>
+    
+    <!-- Output container for displaying results -->
+    <div id="output"></div>
+    
+    <!-- External JavaScript file -->
+    <script src="allTruthy.js"></script>
+</body>
+</html>
 
-<!-- Examples -->
-<!-- allTruthy(true, true, true) ➞ true -->
-
-<!-- allTruthy(true, false, true) ➞ false -->
-
-<!-- allTruthy(5, 4, 3, 2, 1, 0) ➞ false -->
-
-
-def allTruthy(*args):
-    """
-    Returns True if all arguments are truthy, False otherwise.
-    """
-    return all(arg for arg in args)
-
-
-
-    print(allTruthy(True, True, True))  # True
-print(allTruthy(True, False, True))  # False
-print(allTruthy(5, 4, 3, 2, 1, 0))  # False
